[package]
name = "planr"
version = "0.1.0"
edition = "2024"

[package.metadata.sqlx]
migrations = "migrations"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
debug = false
incremental = false
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"

[dependencies]
anyhow = "1.0.103"
chrono = { version = "0.4.45", features = ["serde"] }
rust_decimal = { version = "1.42.1", features = ["serde-float"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["uuid", "chrono", "postgres", "runtime-tokio", "tls-rustls-ring-webpki", "rust_decimal"] }
thiserror = "2.0.18"
uuid = { version = "1.23.4", features = ["serde", "v7"] }
