[package]
name = "planr"
version = "0.1.0"
edition = "2024"

[package.metadata.sqlx]
migrations = "migrations"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
debug = false
incremental = false
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"

[dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
chrono = { version = "0.4.45", features = ["serde"] }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
dotenvy = "0.15.7"
rust_decimal = { version = "1.42.1", features = ["serde-float"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
sqlx = { version = "0.9.0", features = ["uuid", "chrono", "postgres", "runtime-tokio", "tls-rustls-ring-webpki", "rust_decimal"] }
thiserror = "2.0.18"
uuid = { version = "1.23.4", features = ["serde", "v7"] }

[dev-dependencies]
axum-test = "20.1.0"
